--- a/bundle.yml
+++ b/bundle.yml
@@ -10,7 +10,10 @@ cmake : >
         BUILD_eckit=OFF
         BUILD_fckit=OFF
         BUILD_atlas=OFF
+        BUILD_field_api=OFF
         ENABLE_OMP=ON
+        ENABLE_CUDA=OFF
+        ENABLE_ACC=OFF
         ENABLE_SINGLE_PRECISION=OFF
 
 projects :
@@ -55,6 +58,7 @@ projects :
         require : ecbuild
         cmake   : >
             UTIL_MODULE_PATH=${CMAKE_SOURCE_DIR}/cloudsc-dwarf/src/common/module
+            FIELD_API_ENABLE_ACC=OFF
 
     - fckit :
         git     : https://github.com/ecmwf/fckit
@@ -78,7 +82,6 @@ projects :
         require : ecbuild serialbox loki field_api
 
 options :
-
     - toolchain :
         help  : Specify compiler options via supplied toolchain file
         cmake : CMAKE_TOOLCHAIN_FILE={{value}}
@@ -91,9 +94,27 @@ options :
             ENABLE_DOUBLE_PRECISION=OFF
             FIELD_API_DEFINITIONS=SINGLE
 
+    - with-field-api :
+        help : Enable Field API variants to be built
+        cmake : >
+            BUILD_field_api=ON
+            ENABLE_CLOUDSC_FORTRAN_FIELD=ON
+
+    - with-mapped-fields :
+        help : Enable Field API to use mapped memory by default
+        cmake : >
+            ENABLE_FIELD_API_MAPPED_MEMORY=ON
+    
+    - with-pinned-fields :
+        help : Enable Field API to use mapped memory by default
+        cmake : >
+            ENABLE_FIELD_API_PINNED_MEMORY=ON
+
     - with-gpu :
         help  : Enable GPU kernels
         cmake : >
+            ENABLE_ACC=ON
+            FIELD_API_ENABLE_ACC=ON
             ENABLE_CLOUDSC_GPU_SCC=ON
             ENABLE_CLOUDSC_GPU_SCC_HOIST=ON
             ENABLE_CLOUDSC_GPU_SCC_K_CACHING=ON
@@ -103,9 +124,9 @@ options :
         help  : Enable GPU kernel variants based on CUDA and CUDA-Fortran
         cmake : >
             ENABLE_CUDA=ON
+            FIELD_API_ENABLE_CUDA=ON
             ENABLE_CLOUDSC_GPU_SCC_CUF=ON
             ENABLE_CLOUDSC_GPU_SCC_CUF_K_CACHING=ON
-            BUILD_field_api=ON
 
     - with-hip :
         help: Enable GPU kernel variant based on HIP
