--- a/src/cloudsc_fortran/CMakeLists.txt
+++ b/src/cloudsc_fortran/CMakeLists.txt
@@ -12,6 +12,12 @@ ecbuild_add_option( FEATURE CLOUDSC_FORTRAN
     CONDITION Serialbox_FOUND OR HDF5_FOUND
 )
 
+# Define the cloudsc CPU variant
+ecbuild_add_option( FEATURE CLOUDSC_FORTRAN_FIELD
+    DESCRIPTION "Build the field API Fortran version of CLOUDSC using Serialbox" DEFAULT ON
+    CONDITION Serialbox_FOUND OR HDF5_FOUND
+)
+
 if( HAVE_CLOUDSC_FORTRAN )
 
     # Define the binary build target for this variant
@@ -73,3 +79,66 @@ if( HAVE_CLOUDSC_FORTRAN )
         CONDITION HAVE_OMP AND HAVE_MPI
     )
 endif()
+
+if( HAVE_CLOUDSC_FORTRAN_FIELD )
+
+    # Define the binary build target for this variant
+    ecbuild_add_executable(
+        TARGET dwarf-cloudsc-fortran-field
+        SOURCES
+            dwarf_cloudsc.F90
+            cloudsc_driver_field_mod.F90
+            cloudsc.F90
+        LIBS
+            cloudsc-common-lib
+            DEFINITIONS ${CLOUDSC_DEFINITIONS} CLOUDSC_FIELD
+    )
+
+    # Create symlink for the input data
+    if( HAVE_SERIALBOX )
+      execute_process(COMMAND ${CMAKE_COMMAND} -E create_symlink
+          ${CMAKE_CURRENT_SOURCE_DIR}/../../data ${CMAKE_CURRENT_BINARY_DIR}/../../../data )
+    endif()
+
+    if( HAVE_HDF5 )
+      execute_process(COMMAND ${CMAKE_COMMAND} -E create_symlink
+          ${CMAKE_CURRENT_SOURCE_DIR}/../../config-files/input.h5 ${CMAKE_CURRENT_BINARY_DIR}/../../../input.h5 )
+      execute_process(COMMAND ${CMAKE_COMMAND} -E create_symlink
+          ${CMAKE_CURRENT_SOURCE_DIR}/../../config-files/reference.h5 ${CMAKE_CURRENT_BINARY_DIR}/../../../reference.h5 )
+    endif()
+
+    ecbuild_add_test(
+        TARGET dwarf-cloudsc-fortran-field-serial
+        COMMAND bin/dwarf-cloudsc-fortran-field
+        ARGS 1 100 16
+        WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/../../..
+        OMP 1
+    )
+    ecbuild_add_test(
+        TARGET dwarf-cloudsc-fortran-field-omp
+        COMMAND bin/dwarf-cloudsc-fortran-field
+        ARGS 4 100 16
+        WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/../../..
+        OMP 4
+        CONDITION HAVE_OMP
+    )
+    ecbuild_add_test(
+        TARGET dwarf-cloudsc-fortran-field-mpi
+        COMMAND bin/dwarf-cloudsc-fortran-field
+        ARGS 1 100 16
+        WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/../../..
+        MPI 2
+        OMP 1
+        CONDITION HAVE_MPI
+    )
+    ecbuild_add_test(
+        TARGET dwarf-cloudsc-fortran-field-mpi-omp
+        COMMAND bin/dwarf-cloudsc-fortran-field
+        ARGS 4 100 16
+        WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/../../..
+        MPI 2
+        OMP 4
+        CONDITION HAVE_OMP AND HAVE_MPI
+    )
+endif()
+
