--- a/src/common/CMakeLists.txt
+++ b/src/common/CMakeLists.txt
@@ -82,6 +82,9 @@ ecbuild_add_library( TARGET cloudsc-common-lib
         $<${HAVE_MPI}:module/cloudsc_mpif.F90>
         $<${HAVE_HDF5}:module/hdf5_file_mod.F90>
         $<${HAVE_FIELD_API}:module/cloudsc_field_state_mod.F90>
+        $<${HAVE_FIELD_API}:module/cloudsc_state_type_mod.F90>
+        $<${HAVE_FIELD_API}:module/cloudsc_aux_type_mod.F90>
+        $<${HAVE_FIELD_API}:module/cloudsc_flux_type_mod.F90>
     PRIVATE_INCLUDES
         $<${HAVE_HDF5}:${HDF5_Fortran_INCLUDE_DIRS}>
     PUBLIC_INCLUDES
