--- a/src/cloudsc_loki/cloudsc_loki_field_offload.config
+++ b/src/cloudsc_loki/cloudsc_loki_field_offload.config
@@ -7,7 +7,7 @@ enable_imports = true  # Chase dependencies incurred via imports
 
 # Ensure that we are never adding these to the tree, and thus
 # do not attempt to look up the source files for these.
-disable = ['timer_mod', 'abort', 'file_io_mod', 'foe*', 'fokoop', 'get_environment_variable', '*%update_view', 'cloudsc_mpi_reduce_min', 'cloudsc_mpi_reduce_max','cloudsc_mpi_reduce_sum', 'EC_PMON', 'expand_l1', 'expand_i1', 'expand_r1', 'expand_r2', 'expand_r3', 'load_and_expand_l1', 'load_and_expand_i1', 'load_and_expand_r1', 'load_and_expand_r2', 'load_and_expand_r3', 'VALIDATE_L1', 'VALIDATE_I1', 'VALIDATE_R1', 'VALIDATE_R2', 'VALIDATE_R3', 'get_offsets', 'ERROR_PRINT', '*get_device_data_rdonly', '*get_device_data_rdwr', '*sync_host_rdwr']
+disable = ['abor1', 'timer_mod', 'abort', 'file_io_mod', 'foe*', 'fokoop', 'get_environment_variable', '*%update_view', 'cloudsc_mpi_reduce_min', 'cloudsc_mpi_reduce_max','cloudsc_mpi_reduce_sum', 'EC_PMON', 'expand_l1', 'expand_i1', 'expand_r1', 'expand_r2', 'expand_r3', 'load_and_expand_l1', 'load_and_expand_i1', 'load_and_expand_r1', 'load_and_expand_r2', 'load_and_expand_r3', 'VALIDATE_L1', 'VALIDATE_I1', 'VALIDATE_R1', 'VALIDATE_R2', 'VALIDATE_R3', 'get_offsets', 'ERROR_PRINT', '*get_device_data_rdonly', '*get_device_data_rdwr', '*sync_host_rdwr']
 
 # Prune the tree for these to ensure they are not processed by transformations
 ignore = ['parkind1', 'yomphyder', 'yoecldp', 'fc*_mod']
@@ -170,7 +170,7 @@ frontend = 'FP'
   transformations = ['DataOffload', 'SCCVector', 'ModuleWrap', 'Dependency']
 
 [pipelines.scc-field]
-  transformations = ['FieldOffload', 'SCCVector', 'ModuleWrap', 'Dependency']
+  transformations = ['FieldOffload', 'DataOffload', 'SCCVector', 'ModuleWrap', 'Dependency']
 
 [pipelines.scc-hoist]
   transformations = ['DataOffload', 'SCCHoist', 'ModuleWrap', 'Dependency']
