--- a/bundle.yml
+++ b/bundle.yml
@@ -36,7 +36,7 @@ projects :
 
     - loki :
         git     : https://github.com/ecmwf-ifs/loki
-        version : 49e5d0fea8b9cb7f28a94d2c047a15d81a7fbc50
+        version : je-field-api-offload
         require : ecbuild
         cmake   : >
             LOKI_ENABLE_TESTS=OFF
