README updated and bug fixes in field gpu driver and CMake

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -118,8 +118,12 @@ ecbuild_find_package( NAME atlas )
 
 ecbuild_add_option( FEATURE FIELD_API_MAPPED_MEMORY
     DESCRIPTION "Use device mapped memory by default in Field API objects"
-    CONDITION HAVE_FIELD_API AND field_api_HAVE_ACC AND field_api_HAVE_CUDA
+    CONDITION field_api_HAVE_ACC AND field_api_HAVE_CUDA
     DEFAULT OFF )
+if( HAVE_FIELD_API_MAPPED_MEMORY )
+    list(APPEND CLOUDSC_DEFINITIONS HAVE_FIELD_API_MAPPED_MEMORY)
+endif()
+
 
 # Add option for single-precision builds
 ecbuild_add_option( FEATURE SINGLE_PRECISION
