New CMake target and new cloudsc_loki src files for field offload loki targets

--- a/src/cloudsc_loki/CMakeLists.txt
+++ b/src/cloudsc_loki/CMakeLists.txt
@@ -624,6 +624,76 @@ if( HAVE_CLOUDSC_LOKI )
 
 
     ####################################################
+    ##  "Single Column Coalesced Field" (SCC-FIELD)   ##
+    ##   * Removes horizontal vector loops            ##
+    ##   * Invokes compute kernel as `!$acc vector`   ##
+    ##   * Uses Field API for device data offloading  ##
+    ####################################################
+if ( HAVE_FIELD_API AND field_api_HAVE_ACC )
+    loki_transform(
+        COMMAND convert
+        OUTPUT
+            loki-scc-field/cloudsc.scc_field.F90
+            loki-scc-field/cloudsc_driver_field_loki_mod.scc_field.F90
+        BUILDDIR ${CMAKE_CURRENT_BINARY_DIR}/loki-scc-field
+        DEPENDS
+            cloudsc.F90
+            cloudsc_driver_field_loki_mod.F90
+            ${_OMNI_DEPENDENCIES}
+        MODE scc-field
+        CONFIG ${CMAKE_CURRENT_SOURCE_DIR}/cloudsc_loki_field_offload.config
+        CPP
+        DEFINITIONS
+            CLOUDSC_GPU_TIMING
+            ${CLOUDSC_DEFINE_STMT_FUNC}
+        FRONTEND ${LOKI_FRONTEND}
+        HEADERS
+            ${COMMON_MODULE}/yomcst.F90
+            ${COMMON_MODULE}/yomphyder.F90
+            ${COMMON_MODULE}/yoethf.F90
+            ${COMMON_MODULE}/yoecldp.F90
+            ${COMMON_MODULE}/cloudsc_field_state_mod.F90
+            ${COMMON_MODULE}/cloudsc_flux_type_mod.F90
+            ${COMMON_MODULE}/cloudsc_aux_type_mod.F90
+            ${COMMON_MODULE}/cloudsc_state_type_mod.F90
+        SOURCES
+            ${CMAKE_CURRENT_SOURCE_DIR}
+            ${COMMON_MODULE}
+        INCLUDES
+            ${COMMON_INCLUDE}
+        XMOD
+            ${_TARGET_XMOD_DIR}
+            ${XMOD_DIR}
+    )
+
+    ecbuild_add_executable( TARGET dwarf-cloudsc-loki-scc-field
+        SOURCES
+            dwarf_cloudsc.F90
+            loki-scc-field/cloudsc.scc_field.F90
+            loki-scc-field/cloudsc_driver_field_loki_mod.scc_field.F90
+        LIBS
+            cloudsc-common-lib
+        DEFINITIONS ${CLOUDSC_DEFINITIONS} CLOUDSC_GPU_SCC_FIELD
+    )
+    # Set specific module directory to avoid aliasing of .mod files
+    set_target_properties(  dwarf-cloudsc-loki-scc-field
+    	PROPERTIES Fortran_MODULE_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/loki-scc-field
+    )
+
+
+    ecbuild_add_test(
+        TARGET dwarf-cloudsc-loki-scc-field
+        COMMAND bin/dwarf-cloudsc-loki-scc-field
+        ARGS 1 1280 128
+        WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/../../..
+        OMP 1
+        ENVIRONMENT "NVCOMPILER_ACC_CUDA_HEAPSIZE=128M"
+    )
+
+endif()
+
+
+    ####################################################
     ##  SCC CUF (CUDA Fortran)                        ##
     ##   * SCC with CUDA Fortran (CUF)                ##
     ##   * allows for 3 types/kind of transformation  ##
