Loki: Add comments and inline documentation to the Loki config file

--- a/src/cloudsc_loki/cloudsc_loki.config
+++ b/src/cloudsc_loki/cloudsc_loki.config
@@ -1,7 +1,21 @@
+# -------------------------------------------------------------------
+# Loki source transformation configurations
+# -------------------------------------------------------------------
+# This file contains configurations for multiple source transformation
+# pipelines and batch processing settings to apply Loki transformations
+# to the CLOUDSC source tree.
+
+
+# Loki batch scheduler configuration
+# -------------------------------------------------------------------
+# The Loki batch scheduler performs automated discovery of call trees
+# from a select set of seed subroutines. Whenever it adds new
+# nodes to the call tree, the following default behaviour will be
+# honoured, unless it is specifically overwritten below.
+
 [default]
-# Specifies the behaviour of auto-expanded routines
-role = 'kernel'
-expand = true  # Automatically expand subroutine calls
+role = 'kernel'  # Role to determine how to transform a routine
+expand = true  # Automatically expand call tree to subroutine calls
 strict = true  # Throw exceptions during dicovery
 enable_imports = true  # Chase dependencies incurred via imports
 
@@ -9,10 +23,18 @@ enable_imports = true  # Chase dependencies incurred via imports
 # do not attempt to look up the source files for these.
 disable = ['timer_mod', 'abort', 'file_io_mod', 'foe*', 'fokoop']
 
-# Prune the tree for these to ensure they are not processed by transformations
+# Prune these moduels from the treeto ensure they are not processed by
+# transformations
 ignore = ['parkind1', 'yomphyder', 'yoecldp', 'fc*_mod']
 
-# Define entry point for call-tree transformation
+
+# Call tree entry points ("driver" subroutines)
+# -------------------------------------------------------------------
+#
+# Note that Loki differentiates between "driver" routines, which act as
+# call tree roots and contain the offload and parallelisation loops, and
+# "kernel" routines that only contain compute loops and are called
+# from drivers or other kernels within parallel sections.
 [routines]
 
 [routines.cloudsc_driver]
@@ -20,25 +42,33 @@ ignore = ['parkind1', 'yomphyder', 'yoecldp', 'fc*_mod']
   expand = true
 
 
-# Define indices and bounds for array dimensions
+# Configuration of "Dimension" variables
+# -------------------------------------------------------------------
+# Loki uses rigorously enforced variable naming conventions to
+# identifiy loops that pertain to a particular scientific dimension.
 [dimensions]
 
+# The horizontal dimension that signifies the vecotr dimension
 [dimensions.horizontal]
   size = 'KLON'
   index = 'JL'
   bounds = ['KIDIA', 'KFDIA']
   aliases = ['NPROMA', 'KDIM%KLON']
 
+# The vertical data dimension for advanced optimisations
 [dimensions.vertical]
   size = 'KLEV'
   index = 'JK'
 
+# The outer loop blocking dimension in the parallel driver
 [dimensions.block_dim]
   size = 'NGPBLKS'
   index = 'IBL'
 
 
-# Overwrite frontend for header modules that cannot be parsed via OMNI
+# Frontend argument overrides
+# -------------------------------------------------------------------
+# Certain header modules can only be processed by the FP frontend
 [frontend_args]
 
 [frontend_args."yomphyder.F90"]
@@ -53,9 +83,16 @@ frontend = 'FP'
 [frontend_args."yoecldp.F90"]
 frontend = 'FP'
 
+
 # Define specific transformation settings
+# -------------------------------------------------------------------
+# The section configures the invididual steps of the transformation
+# pipelines. Importantly, it also defines the class name and Python
+# module that Transformation objecst will be instatiated from.
 [transformations]
 
+# A set of utility transformations
+# -------------------------------------------------------------------
 [transformations.Idem]
   classname = 'IdemTransformation'
   module = 'loki.transformations'
@@ -85,8 +122,11 @@ frontend = 'FP'
   check_bounds = true
 
 
-# Loki-SCC family
-# -----------------------------------------
+# Loki-SCC family of transformations
+# -------------------------------------------------------------------
+# A set of transformation passes that transforms SIMD vectorisation
+# loops into SIMD-style loops for coalesced memory access on GPU.
+# It also contains passes that improve device memory handling on GPUs.
 [transformations.SCCVector]
   classname = 'SCCVectorPipeline'
   module = 'loki.transformations.single_column'
@@ -116,7 +156,7 @@ frontend = 'FP'
 
 
 # Housekeeping and other transformations
-# -----------------------------------------
+# -------------------------------------------------------------------
 [transformations.DataOffload]
   classname = 'DataOffloadTransformation'
   module = 'loki.transformations'
@@ -142,7 +182,10 @@ frontend = 'FP'
 
 
 # Full transformation pipelines
-# -----------------------------------------
+# -------------------------------------------------------------------
+# The entries below are mapped to the "mode" entry point in
+# loki-transform.py. The define the set of transformation and the
+# order in which they are applies to the complete call tree.
 [pipelines]
 
 [pipelines.idem]
