Loki: Update to Loki v0.2.7, including updates to SCC-CUF trafos

--- a/src/cloudsc_loki/cloudsc_cuf_loki.config
+++ b/src/cloudsc_loki/cloudsc_cuf_loki.config
@@ -40,6 +40,7 @@ expand = true
   size = 'NGPBLKS'
   index = 'IBL'
   aliases = ['JKGLO']
+  index_aliases = ['JKGLO']
 
 
 # Define specific transformation settings
@@ -52,7 +53,7 @@ expand = true
 #
 # Please note that these are intended for eventual refactoring!
 [transformations.SccCuf-hoist]
-  classname = 'SccCufTransformation'
+  classname = 'SCCLowLevelCufHoist'
   module = 'loki.transformations.single_column'
 [transformations.SccCuf-hoist.options]
   transformation_type = 'hoist'
@@ -61,18 +62,8 @@ expand = true
   block_dim = '%dimensions.block_dim%'
   derived_types = ['TECLDP']
 
-[transformations.SccCuf-dynamic]
-  classname = 'SccCufTransformation'
-  module = 'loki.transformations.single_column'
-[transformations.SccCuf-dynamic.options]
-  transformation_type = 'dynamic'
-  horizontal = '%dimensions.horizontal%'
-  vertical = '%dimensions.vertical%'
-  block_dim = '%dimensions.block_dim%'
-  derived_types = ['TECLDP']
-
 [transformations.SccCuf-parametrise]
-  classname = 'SccCufTransformation'
+  classname = 'SCCLowLevelCufParametrise'
   module = 'loki.transformations.single_column'
 [transformations.SccCuf-parametrise.options]
   transformation_type = 'parametrise'
@@ -80,23 +71,7 @@ expand = true
   vertical = '%dimensions.vertical%'
   block_dim = '%dimensions.block_dim%'
   derived_types = ['TECLDP']
-
-# For SCC-CUF-parametrise we need to define the
-# in-source replacement via "dic2p".
-[transformations.Parametrise]
-  classname = 'ParametriseTransformation'
-  module = 'loki.transformations'
-  options = { dic2p = {NLEV = 137} }
-
-[transformations.HoistTemporariesAnalysis]
-  classname = 'HoistTemporaryArraysAnalysis'
-  module = 'loki.transformations'
-  options = { dim_vars = ['KLEV'] }
-
-[transformations.HoistTemporariesSynthesis]
-  classname = 'HoistTemporaryArraysDeviceAllocatableTransformation'
-  module = 'loki.transformations'
-  options = { as_kwarguments = true }
+  dic2p = {NLEV = 137}
 
 
 # Housekeeping and other transformations
@@ -131,13 +106,10 @@ expand = true
 
 [pipelines.cuf-parametrise]
   transformations = [
-    'Sanitise', 'DataOffload', 'SccCuf-parametrise',
-    'Parametrise', 'ModuleWrap', 'Dependency'
+    'Sanitise', 'DataOffload', 'SccCuf-parametrise', 'ModuleWrap', 'Dependency'
   ]
 
 [pipelines.cuf-hoist]
   transformations = [
-    'Sanitise', 'DataOffload', 'SccCuf-hoist',
-    'HoistTemporariesAnalysis', 'HoistTemporariesSynthesis',
-    'ModuleWrap', 'Dependency'
+    'Sanitise', 'DataOffload', 'SccCuf-hoist', 'ModuleWrap', 'Dependency'
   ]
