--- a/bundle.yml
+++ b/bundle.yml
@@ -99,10 +99,10 @@ options :
             BUILD_field_api=ON
             ENABLE_CLOUDSC_FORTRAN_FIELD=ON
 
-    - with-mapped-fields :
-        help : Enable Field API to use mapped memory by default
+    - without-mapped-fields :
+        help : Disables automatic registering of Field API fields in ACC map.
         cmake : >
-            ENABLE_FIELD_API_MAPPED_MEMORY=ON
+            FIELD_API_DISABLE_MAPPED_MEMORY=ON
     
     - with-gpu :
         help  : Enable GPU kernels
