--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -86,12 +86,12 @@ jobs:
           - arch: nvhpc/21.9
             nvhpc_version: 21.9
             io_library_flag: ''
-            build_flags: '--single-precision --with-gpu --with-loki --with-cuda --with-field --with-mapped-fields'
+            build_flags: '--single-precision --with-gpu --with-loki --with-cuda --with-field --without-mapped-fields'
             ctest_exclude_pattern: '-gpu-|-scc-|-loki-c|-cuda'  # GPU variants don't work on CPU runners, loki-c variant causes SIGFPE
           - arch: nvhpc/21.9
             nvhpc_version: 21.9
             io_library_flag: '--with-serialbox'
-            build_flags: '--with-gpu --with-loki --with-cuda --with-field --with-mapped-fields'
+            build_flags: '--with-gpu --with-loki --with-cuda --with-field --without-mapped-fields'
             ctest_exclude_pattern: '-gpu-|-scc-|-loki-c|-cuda'  # GPU variants don't work on CPU runners, loki-c variant causes SIGFPE
 
           - arch: nvhpc/23.5
@@ -127,12 +127,12 @@ jobs:
           - arch: nvhpc/23.5
             nvhpc_version: 23.5
             io_library_flag: ''
-            build_flags: '--single-precision --with-gpu --with-loki --with-cuda --with-field --with-mapped-fields'
+            build_flags: '--single-precision --with-gpu --with-loki --with-cuda --with-field --without-mapped-fields'
             ctest_exclude_pattern: '-gpu-|-scc-|-loki-c|-loki-sca|-cuda'  # GPU variants don't work on CPU runners, loki-c and loki-sca variant causes SIGFPE
           - arch: nvhpc/23.5
             nvhpc_version: 23.5
             io_library_flag: '--with-serialbox'
-            build_flags: '--with-gpu --with-loki --with-cuda --with-field --with-mapped-fields'
+            build_flags: '--with-gpu --with-loki --with-cuda --with-field --without-mapped-fields'
             ctest_exclude_pattern: '-gpu-|-scc-|-loki-c|-loki-sca|-cuda'  # GPU variants don't work on CPU runners, loki-c and loki-sca variant causes SIGFPE
 
     # Steps represent a sequence of tasks that will be executed as part of the job
