replaced gnu gpu tests with cpu tests, added F-API DEV_ALLOC_SIZE env. variable to field gpu tests

--- a/src/cloudsc_gpu/CMakeLists.txt
+++ b/src/cloudsc_gpu/CMakeLists.txt
@@ -254,7 +254,7 @@ if( HAVE_CLOUDSC_GPU_SCC_FIELD )
         ARGS 1 1000 128
         WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/../../..
         OMP 1
-        ENVIRONMENT "NVCOMPILER_ACC_CUDA_HEAPSIZE=64M"
+        ENVIRONMENT "NVCOMPILER_ACC_CUDA_HEAPSIZE=64M" "DEV_ALLOC_SIZE=1073741824"
     )
     
     ecbuild_add_test(
@@ -263,7 +263,7 @@ if( HAVE_CLOUDSC_GPU_SCC_FIELD )
         ARGS 1 1000 128
         WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/../../..
         OMP 1
-        ENVIRONMENT "NVCOMPILER_ACC_CUDA_HEAPSIZE=64M" "CLOUDSC_PACKED_STORAGE=ON"
+        ENVIRONMENT "NVCOMPILER_ACC_CUDA_HEAPSIZE=64M" "DEV_ALLOC_SIZE=1073741824" "CLOUDSC_PACKED_STORAGE=ON"
     )
     
     # Importantly, we add the "pinned" flag to the linker command to ensure pinning!
@@ -278,7 +278,7 @@ if( HAVE_CLOUDSC_GPU_SCC_FIELD )
         ARGS 1 1000 128
         WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/../../..
         OMP 1
-        ENVIRONMENT "NVCOMPILER_ACC_CUDA_HEAPSIZE=64M" "CLOUDSC_FIELD_API_PINNED=ON"
+        ENVIRONMENT "NVCOMPILER_ACC_CUDA_HEAPSIZE=64M" "DEV_ALLOC_SIZE=1073741824" "CLOUDSC_FIELD_API_PINNED=ON"
     )
     endif()
 
